--- a/Homework8/Stylesheets/intialStyleSheets.css
+++ b/Homework8/Stylesheets/intialStyleSheets.css
@@ -1,7 +1,7 @@
 body{
     background-image: url("http://cs-server.usc.edu:45678/hw/hw8/images/bg.jpg");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100% 100%;
     background-attachment: fixed;
 }
 div#Header{
@@ -38,37 +38,44 @@ div#DivTwoButtonsID{
     padding-right: 0px;
 }
 div#DivSearchClearID{
-    padding-left: 15px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 button#ClearButtonID{
-    width: 93px;
+    width: 50%;
     text-align: justify;
+    height: 32%;
 }
 span#ClearButtonTextID{
     margin-right: 22px;
 }
+div#DivLogoPartID{
+    margin-left: 4px;
+    margin-right: 0px;
+}
 div#DivPoweredByID{
     padding-left: 0px;
     padding-right: 0px;
-    padding-top: 25px;
-    text-align: right;
+    padding-top: 11px;
+    /*text-align: right;*/
 }
 p#PoweredID{
     font-size: small;
     color: white;
-}
-div#DivForecastLocalID{
-    padding-left: 3px;
-    padding-right: 0px;
-    padding-top: 5px;
-    padding-bottom: 20px;
+    padding-top: 19px;
 }
 img#ForecastLogoID{
-    width: 112px;
-    height: 56px;
+    padding-top: 5px;
+    width: 60%;
+    height: 50%;
 }
 
-
+/*Table part is above*/
+div#WhiteLineID{
+    width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 
